k8s/ai-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blocker-ai-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blocker-ai
  template:
    metadata:
      labels:
        app: blocker-ai
    spec:
      containers:
        - image: docker.io/sr123/ai:ai-1.0.0-SNAPSHOT-7.1
          name: blocker-ai
          ports:
            - containerPort: 8082
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: server
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: server
            initialDelaySeconds: 20
            periodSeconds: 10
---

apiVersion: v1
kind: Service
metadata:
  name: blocker-ai
spec:
  type: LoadBalancer
  ports:
    - port: 8082
      protocol: TCP
      targetPort: server
  selector:
    app: blocker-ai
