k8s/fetcher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blocker-fetcher-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blocker-fetcher
  template:
    metadata:
      labels:
        app: blocker-fetcher
    spec:
      containers:
        - image: docker.io/sr123/fetcher:fetcher-1.0.0-SNAPSHOT-2.1
          name: blocker-fetcher
          ports:
            - containerPort: 8083
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /fetcher/health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /fetcher/health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 10
---

apiVersion: v1
kind: Service
metadata:
  name: blocker-fetcher
spec:
  type: NodePort
  ports:
    - port: 8083
      protocol: TCP
      targetPort: server
  selector:
    app: blocker-fetcher
