k8s/provider-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blocker-provider-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blocker-provider
  template:
    metadata:
      labels:
        app: blocker-provider
    spec:
      containers:
        - image: docker.io/sr123/provider:provider-1.0.0-SNAPSHOT-26.1
          name: blocker-provider
          ports:
            - containerPort: 8081
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /provider/health/live
              port: server
            initialDelaySeconds: 40
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /provider/health/ready
              port: server
            initialDelaySeconds: 40
            periodSeconds: 10
---

apiVersion: v1
kind: Service
metadata:
  name: blocker-provider
spec:
  type: NodePort
  ports:
    - port: 8081
      protocol: TCP
      targetPort: server
  selector:
    app: blocker-provider
