k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  rules:
    - http:
        paths:
          - path: /provider/*
            backend:
              serviceName: blocker-provider
              servicePort: 8081
          - path: /ai/*
            backend:
              serviceName: blocker-ai
              servicePort: 8082
          - path: /fetcher/*
            backend:
              serviceName: blocker-fetcher
              servicePort: 8083
